--- a/gallery.html
+++ b/gallery.html
@@ -221,7 +221,7 @@
                     <h3>Get Involved</h3>
                     <ul class="list-unstyled footer-link">
                         <li><a href="#">How to Donate</a></li>
-                        <li><a href="#">Sponsor, Orphans</a></li>
+                        <li><a href="#">Sponsor an orphan</a></li>
                         <li><a href="#">Volunteer With Us</a></li>
                     </ul>
                 </div>
