--- a/how-to-donate.html
+++ b/how-to-donate.html
@@ -164,28 +164,20 @@
               </ul>
             </div>
           </div> -->
-          <div class="col-md-12 order-1 main mb-5">
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-md-12">                
+                <h2 class="text-center">Donate Now</h2>
+                <p class="text-center">Donate Generously.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 order-1 main mb-5">
             <div class="row">
               <div class="col-md-12">
-                <h2>How to Donate</h2>
-                <p>Donate Generously.</p>
-                  <h4 style="color:#67c18c; font-size:25px">United Peace Foundation</h4>
-                  ICICI bank, A/C 141205000918 , IFSC code. ICIC0001412.<br>
+                  <h4 style="color:#67c18c; font-size:25px; position: relative;top: -30px;">United Peace Foundation</h4>
+                  <p  style="position: relative;top: -30px;">Bank Name - ICICI bank<br>Account Number - 141205000918<br>IFSC code - ICIC0001412.</p>
                   NOTE: Transaction is accepted within India only.
-                <blockquote class="blockquote">
-                  <p class="mb-0 text-black">
-                    &ldquo;You can also donate through any UPI app.&rdquo;
-                    <p>Merchant Name : M/S.UNITED PEACE FOUNDATION<br>
-                  </p>
-                </blockquote>
-                <p class="element-animate" data-animate-effect="fadeIn">
-                  <img
-                    src="img/upi.jpeg"
-                    alt="Image placeholder"
-                    class=""
-                    width="250px" height="250px"
-                  />
-                </p>
                   <footer class="blockquote-footer" style="color:#67c18c; font-size:25px">
                     <b>Important note</b> <cite title="Source Title"></cite>
                   </footer>
@@ -203,6 +195,27 @@
                     width="250px" height="250px"
                   />
                 </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 order-1 main mb-5">
+            <div class="row">
+              <div class="col-md-12">
+                <blockquote class="blockquote">
+                  <p class="mb-0 text-black">
+                    &ldquo;You can also donate through any UPI app.&rdquo;
+                    <p>Merchant Name : M/S.UNITED PEACE FOUNDATION</p>
+                  </p>
+                </blockquote>
+                <p class="element-animate" data-animate-effect="fadeIn">
+                  <img
+                   src="img/upi.jpeg"
+                   alt="Image placeholder"
+                   class=""
+                   width="250px" height="250px"
+                  />
+                </p>
+                <span>UPI - <b>8825139198.eazypay@icici</b></span>
               </div>
             </div>
           </div>
@@ -292,7 +305,7 @@
             <h3>Get Involved</h3>
             <ul class="list-unstyled footer-link">
               <li><a href="#">How to Donate</a></li>
-              <li><a href="#">Sponsor, Orphans</a></li>
+              <li><a href="#">Sponsor an orphan</a></li>
               <li><a href="#">Volunteer With Us</a></li>
             </ul>
           </div>
