--- a/index.html
+++ b/index.html
@@ -18,7 +18,24 @@
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
     <link rel="shortcut icon" href="img/upf-ico.ico">
-    <style>
+    <style>      
+      /* Add this CSS code to your stylesheet */
+      .donatenow-fixed {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #EA4231; /* red color */
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+      }
+
+      .donatenow-fixed:hover {
+        background-color: #FF3737; /* darker red color on hover */
+      }
     </style>
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -28,6 +45,7 @@
       <div class="popup"> <a href="javascript:void(0)"><img src="img/10yrs-celeb.jpeg" /></a> </div>
     </div>
     <header role="banner">
+    <a href="how-to-donate.html" class="donatenow-fixed">Donate Now</a>
       <!-- <div class="top-bar">
         <div class="container">
           <div class="row">
@@ -528,21 +546,17 @@
         </div>
       </div>
     </section>
-
     <section class="section bg-light">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-12 text-center">
             <h2 class="text-uppercase heading mb-4">WHO WE ARE</h2>
-            <!-- <p class="mb-0 text-left">
-              Many vulnerable orphans and abandoned children are left on the streets begging for survival, need care and support. To induct them into a society where they can get the chance to grow up in a loving and caring environment. To provide nutritious food, quality education, healthcare and shelter for the homeless orphans and poverty-stricken children. To help and uplift the destitute, widows and deprived section of the society regardless of their faith, caste or creed.
-            </p><br> -->
             <p class="mb-0 text-left">
               Support orphans by providing food, education, medical assistance and other basic amenities.
-            </p><br>
+            </p>
             <p class="mb-0 text-left">
               Sponsorship to orphans who are living with their mother / guardian by taking care of their monthly food and educational expenses.
-            </p><br>
+            </p>
             <p class="mb-0 text-left">
               Provide monthly dietary assistance to widow headed families, destitute and helpless old age poor who are not capable of earning their bread.
             </p>
@@ -554,7 +568,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center">
+          <div class="col-md-12 text-center"><br>
             <h2 class="text-uppercase heading mb-4">OUR MISSION</h2>
             <p class="mb-0 text-left">
               Many vulnerable orphans and abandoned children are left on the streets begging for survival, need care and support. To induct them into a society where they can get the chance to grow up in a loving and caring environment. To provide nutritious food, quality education, healthcare and shelter for the homeless orphans and poverty-stricken children. To help and uplift the destitute, widows and deprived section of the society regardless of their faith, caste or creed.</p>
@@ -811,7 +825,7 @@
             <h3>Get Involved</h3>
             <ul class="list-unstyled footer-link">
               <li><a href="#">How to Donate</a></li>
-              <li><a href="#">Sponsor, Orphans</a></li>
+              <li><a href="#">Sponsor an orphan</a></li>
               <li><a href="#">Volunteer With Us</a></li>
             </ul>
           </div>
