--- a/stories.html
+++ b/stories.html
@@ -154,7 +154,7 @@
           <div class="col-lg-4 col-md-6 col-12">
             <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
-                <span class="date">Date</span> "Name"
+                <span class="date"></span> "Name"
               </h3>
               <span class="ion-plus icon"></span>
               <img
@@ -167,7 +167,7 @@
           <div class="col-lg-4 col-md-6 col-12">
             <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
-                <span class="date">Date</span> "Name"
+                <span class="date"></span> "Name"
               </h3>
               <span class="ion-plus icon"></span>
               <img
@@ -180,7 +180,7 @@
           <div class="col-lg-4 col-md-6 col-12">
             <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
-                <span class="date">Date</span> "Name"
+                <span class="date"></span> "Name"
               </h3>
               <span class="ion-plus icon"></span>
               <img
@@ -193,7 +193,7 @@
           <div class="col-lg-4 col-md-6 col-12">
             <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
-                <span class="date">Date</span> "Name"
+                <span class="date"></span> "Name"
               </h3>
               <span class="ion-plus icon"></span>
               <img
@@ -206,7 +206,7 @@
           <div class="col-lg-4 col-md-6 col-12">
             <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
-                <span class="date">Date</span> "Name"
+                <span class="date"></span> "Name"
               </h3>
               <span class="ion-plus icon"></span>
               <img
@@ -219,7 +219,7 @@
           <div class="col-lg-4 col-md-6 col-12">
             <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
-                <span class="date">Date</span> "Name"
+                <span class="date"></span> "Name"
               </h3>
               <span class="ion-plus icon"></span>
               <img
