--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 >
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
                   <a class="dropdown-item" href="how-to-donate.html">How to Donate</a>
-                  <a class="dropdown-item" href="sponsor-orphan-sponsorship.html">Sponsor, Orphan, Sponsorship</a>
+                  <a class="dropdown-item" href="sponsor-an-orphan.html">Sponsor An Orphan</a>
                   <a class="dropdown-item" href="volunteer-with-us.html">Volunteer With Us</a>
                 </div>
               </li>
@@ -192,7 +192,7 @@
       </div>
       <div
         class="slider-item"
-        style="background-image: url('img/carousel/slider6.jpg')"
+        style="background-image: url('img/carousel/slider11.jpg')"
       >
         <div class="container">
           <div class="row slider-text align-items-center">
@@ -611,7 +611,7 @@
                 /></a>
                 <div class="media-body">
                   <h3 class="mt-0 text-black">
-                    <a href="orphan-sponsorship-programme.html" class="text-black"
+                    <a href="sponsor-an-orphan.html" class="text-black"
                       >Orphan Sponsorship Programme<span class="age"><br>Read more...</span></a
                     >
                   </h3>
