--- a/about-our-trust.html
+++ b/about-our-trust.html
@@ -89,7 +89,7 @@
                 >
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
                   <a class="dropdown-item" href="how-to-donate.html">How to Donate</a>
-                  <a class="dropdown-item" href="sponsor-orphan-sponsorship.html">Sponsor, Orphan, Sponsorship</a>
+                  <a class="dropdown-item" href="sponsor-an-orphan.html">Sponsor An Orphan</a>
                   <a class="dropdown-item" href="volunteer-with-us.html">Volunteer With Us</a>
                 </div>
               </li>
@@ -104,7 +104,7 @@
                   >Programme</a
                 >
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="orphan-sponsorship-programme.html">Orphan Sponsorship Programme</a>
+                  <a class="dropdown-item" href="orphan-sponsorship-programme.html">Sponsor An Orphan</a>
                   <a class="dropdown-item" href="educational-programme.html">Educational Programm</a>
                   <a class="dropdown-item" href="food-programme.html">Food Programme</a>
                   <a class="dropdown-item" href="emergency-relief-programme.html">Emergency Relief Programme</a>
