--- a/emergency-relief-programme.html
+++ b/emergency-relief-programme.html
@@ -89,7 +89,7 @@
                 >
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
                   <a class="dropdown-item" href="how-to-donate.html">How to Donate</a>
-                  <a class="dropdown-item" href="sponsor-orphan-sponsorship.html">Sponsor, Orphan, Sponsorship</a>
+                  <a class="dropdown-item" href="sponsor-an-orphan.html">Sponsor An Orphan</a>
                   <a class="dropdown-item" href="volunteer-with-us.html">Volunteer With Us</a>
                 </div>
               </li>
