--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Get Involved</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown04">
                                 <a class="dropdown-item" href="how-to-donate.html">How to Donate</a>
-                                <a class="dropdown-item" href="sponsor-orphan-sponsorship.html">Sponsor, Orphan,
+                                <a class="dropdown-item" href="sponsor-an-orphan.html">Sponsor, Orphan,
                                     Sponsorship</a>
                                 <a class="dropdown-item" href="volunteer-with-us.html">Volunteer With Us</a>
                             </div>
@@ -72,7 +72,7 @@
                             <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Programme</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown04">
-                                <a class="dropdown-item" href="orphan-sponsorship-programme.html">Orphan Sponsorship
+                                <a class="dropdown-item" href="sponsor-an-orphan.html">Orphan Sponsorship
                                     Programme</a>
                                 <a class="dropdown-item" href="educational-programme.html">Educational Programm</a>
                                 <a class="dropdown-item" href="food-programme.html">Food Programme</a>
