--- a/ramadan-appeal.html
+++ b/ramadan-appeal.html
@@ -63,7 +63,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Get Involved</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown04">
                                 <a class="dropdown-item" href="how-to-donate.html">How to Donate</a>
-                                <a class="dropdown-item" href="sponsor-orphan-sponsorship.html">Sponsor, Orphan,
+                                <a class="dropdown-item" href="sponsor-an-orphan.html">Sponsor, Orphan,
                                     Sponsorship</a>
                                 <a class="dropdown-item" href="volunteer-with-us.html">Volunteer With Us</a>
                             </div>
