--- a/sponsor-an-orphan.html
+++ b/sponsor-an-orphan.html
@@ -89,7 +89,7 @@
                 >
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
                   <a class="dropdown-item" href="how-to-donate.html">How to Donate</a>
-                  <a class="dropdown-item" href="sponsor-orphan-sponsorship.html">Sponsor, Orphan, Sponsorship</a>
+                  <a class="dropdown-item" href="sponsor-an-orphan.html">Sponsor An Orphan</a>
                   <a class="dropdown-item" href="volunteer-with-us.html">Volunteer With Us</a>
                 </div>
               </li>
@@ -133,13 +133,13 @@
         <div class="container">
           <div class="row slider-text align-items-center">
             <div class="col-md-7 col-sm-12 element-animate">
-              <h1>Sponsor, Orphan, Sponsorship</h1>
+              <h1>Sponsor An Orphan</h1>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-custom">
                   <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                  <li class="breadcrumb-item"><a href="sponsor-orphan-sponsorship.html">Get Involved</a></li>
+                  <li class="breadcrumb-item"><a href="sponsor-an-orphan.html">Get Involved</a></li>
                   <li class="breadcrumb-item active" aria-current="page">
-                    Sponsor, Orphan, Sponsorship
+                    Sponsor An Orphan
                   </li>
                 </ol>
               </nav>
@@ -167,7 +167,7 @@
           <div class="col-md-12 order-1 main mb-5">
             <div class="row">
               <div class="col-md-12">
-                <h1>Sponsor, Orphan, Sponsorship</h1>
+                <h1>Sponsor An Orphan</h1>
                 <p>Urgent appeal, 50 orphans need sponsorship now, they have been waiting desperately for your help. Act now, sponsor at least one orphan and donate just ₹2500 a month for food, education, clothes and healthcare.</p>
                 <h2>How to Donate</h2>
                 <p>Donate Generously.</p>
