spelling mistake fixed.

--- a/food-programme.html
+++ b/food-programme.html
@@ -169,9 +169,9 @@
               <div class="col-md-12">
                 <h2>Food Programme</h2>
                 <p>
-                  Dietry assistance or food parcel is a lifeline for the families who have no income or bread earner. And for old helpless destitute who are unable to work and widowed headed families. By your generous support we are able to provide necessary dietry assistance to these needy people.</p>
+                  Dietary assistance or food parcel is a lifeline for the families who have no income or bread earner. And for old helpless destitute who are unable to work and widowed headed families. By your generous support we are able to provide necessary dietary assistance to these needy people.</p>
                   <p>
-                    United Peace Foundation is willing to reach every single needy in all parts of cities and villages to provide dietry assistance.</p>
+                    United Peace Foundation is willing to reach every single needy in all parts of cities and villages to provide dietary assistance.</p>
                   <!-- <p class="element-animate" data-animate-effect="fadeIn">
                     <img
                       src="img/beautiful.jpg"
