--- a/sponsor-an-orphan.html
+++ b/sponsor-an-orphan.html
@@ -164,30 +164,22 @@
               </ul>
             </div>
           </div> -->
-          <div class="col-md-12 order-1 main mb-5">
+          <div class="col-md-12">
             <div class="row">
               <div class="col-md-12">
                 <h1>Sponsor An Orphan</h1>
-                <p>Urgent appeal, 50 orphans need sponsorship now, they have been waiting desperately for your help. Act now, sponsor at least one orphan and donate just ₹2500 a month for food, education, clothes and healthcare.</p>
-                <h2>How to Donate</h2>
-                <p>Donate Generously.</p>
-                  <h4 style="color:#67c18c; font-size:25px">United Peace Foundation</h4>
-                  ICICI bank, A/C 141205000918 , IFSC code. ICIC0001412.<br>
+                <p>Urgent appeal, 50 orphans need sponsorship now, they have been waiting desperately for your help. Act now, sponsor at least one orphan and donate just ₹2500 a month for food, education, clothes and healthcare.</p>      
+                <h2 class="text-center">Donate Now</h2>
+                <p class="text-center">Donate Generously.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 order-1 main mb-5">
+            <div class="row">
+              <div class="col-md-12">
+                  <h4 style="color:#67c18c; font-size:25px; position: relative;top: -30px;">United Peace Foundation</h4>
+                  <p  style="position: relative;top: -30px;">Bank Name - ICICI bank<br>Account Number - 141205000918<br>IFSC code - ICIC0001412.</p>
                   NOTE: Transaction is accepted within India only.
-                <blockquote class="blockquote">
-                  <p class="mb-0 text-black">
-                    &ldquo;You can also donate through any UPI app.&rdquo;
-                    <p>Merchant Name : M/S.UNITED PEACE FOUNDATION<br>
-                  </p>
-                </blockquote>
-                <p class="element-animate" data-animate-effect="fadeIn">
-                  <img
-                    src="img/upi.jpeg"
-                    alt="Image placeholder"
-                    class=""
-                    width="250px" height="250px"
-                  />
-                </p>
                   <footer class="blockquote-footer" style="color:#67c18c; font-size:25px">
                     <b>Important note</b> <cite title="Source Title"></cite>
                   </footer>
@@ -197,14 +189,27 @@
                   <li>Our account does not accept donation through NRI accounts. Donations can be accepted if the account has NRI/NRO both operation in single account.</li>
                   <li>If you are a Non-Residential Indians and holding Indian passport and wish to donate, it is mandatory to obtain his/her passport details to ascertain that he/she is an Indian passport holder. We appreciate your support. To confirm your donation. Please write us to <b><a href="mailto:unitedpeacefoundation.in@gmail.com" class="email-to">unitedpeacefoundation.in@gmail.com</a></b></li>
                 </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 order-1 main mb-5">
+            <div class="row">
+              <div class="col-md-12">
+                <blockquote class="blockquote">
+                  <p class="mb-0 text-black">
+                    &ldquo;You can also donate through any UPI app.&rdquo;
+                    <p>Merchant Name : M/S.UNITED PEACE FOUNDATION</p>
+                  </p>
+                </blockquote>
                 <p class="element-animate" data-animate-effect="fadeIn">
                   <img
-                    src="img/donate.jpg"
-                    alt="Image placeholder"
-                    class=""
-                    width="250px" height="250px"
+                   src="img/upi.jpeg"
+                   alt="Image placeholder"
+                   class=""
+                   width="250px" height="250px"
                   />
                 </p>
+                <span>UPI - <b>8825139198.eazypay@icici</b></span>
               </div>
             </div>
           </div>
