--- a/stories.html
+++ b/stories.html
@@ -292,10 +292,10 @@
             <h3>Get In Touch</h3>
             <ul class="list-unstyled footer-link footer-content">
               <li class="d-flex">
-                <span class="mr-3 fa fa-location-arrow"></span
-                ><span class="text-white"
-                  >Zakir Nagar, Mango, Jamshedpur</span
-                >
+                  <a href="https://www.google.com/maps/place/United+Peace+Foundation/@22.8419924,86.1944603,17z/data=!4m14!1m7!3m6!1s0x39f5e38dfe795257:0x285b399e76600865!2sUnited+Peace+Foundation!8m2!3d22.8417228!4d86.1965133!16s%2Fg%2F11khsljlw7!3m5!1s0x39f5e38dfe795257:0x285b399e76600865!8m2!3d22.8417228!4d86.1965133!16s%2Fg%2F11khsljlw7?entry=ttu" target="_blank" class="d-flex text-white" style="text-decoration: none;">
+                      <span class="mr-3 fa fa-location-arrow"></span>
+                      <span>Zakir Nagar, Mango, Jamshedpur</span>
+                  </a>
               </li>
               <li class="d-flex">
                 <span class="mr-3 fa fa-phone"></span
