--- a/how-to-donate.html
+++ b/how-to-donate.html
@@ -207,7 +207,7 @@
                    width="250px" height="250px"
                   />
                 </p>
-                <span>UPI - <b>8825139198.eazypay@icici</b></span>
+                <span>UPI ID - <b>8825139198.eazypay@icici</b></span>
               </div>
             </div>
           </div>
