--- a/ramadan-appeal.html
+++ b/ramadan-appeal.html
@@ -156,14 +156,14 @@
                                             Donate you Zakat & Sadaqah. <br>
                                             <b>Donate Generously to
                                             United Peace Foundation</b><br>
-                                            ICICI BANK <br>
-                                            A/C : 141205000918 <br>
-                                            IFSC code: ICIC0001412 <br>
+                                            Bank Name - ICICI BANK <br>
+                                            Account Number - 141205000918 <br>
+                                            IFSC code - ICIC0001412 <br>
                                             <b>Note:</b> This A/C does not accept the foreign transaction and transaction from
                                             NRI A/C. <br><br>
                                             <b>Find the Scanner Below</b> 👇
                                             <p>Merchant Name : M/S.UNITED PEACE FOUNDATION<br>
-                                                Mobile Number : 8825139198</p>
+                                                <span>UPI ID - <b>8825139198.eazypay@icici</b></span>
                                             </p>
                                             <p class="element-animate" data-animate-effect="fadeIn">
                                                 <img
