--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                 >
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
                   <a class="dropdown-item" href="about-our-trust.html">About Our Trust</a>
-                  <a class="dropdown-item" href="vision-mission">Vision, Mission</a>
+                  <a class="dropdown-item" href="vision-mission.html">Vision, Mission</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
