--- a/ramadan-appeal.html
+++ b/ramadan-appeal.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css" />
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
+    <link rel="shortcut icon" href="img/upf-ico.ico">
 
     <link rel="stylesheet" href="css/style.css" />
 </head>
