--- a/index.html
+++ b/index.html
@@ -710,9 +710,8 @@
           <div class="col-md-4 element-animate">
             <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
-                <span class="date">Date</span> "Name"
+                <span class="date"></span> "Name"
               </h3>
-              <span class="ion-plus icon"></span>
               <img
                 src="img/stories/story3.jpg"
                 alt="Image placeholder"
@@ -723,9 +722,8 @@
           <div class="col-md-4 element-animate">
             <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
-                <span class="date">Date</span> "Name"
+                <span class="date"></span> "Name"
               </h3>
-              <span class="ion-plus icon"></span>
               <img
                 src="img/stories/story2.jpg"
                 alt="Image placeholder"
@@ -736,9 +734,8 @@
           <div class="col-md-4 element-animate">
             <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
-                <span class="date">Date</span> "Name"
+                <span class="date"></span> "Name"
               </h3>
-              <span class="ion-plus icon"></span>
               <img
                 src="img/stories/story1.jpg"
                 alt="Image placeholder"
