placeholder added only

--- a/volunteer-with-us.html
+++ b/volunteer-with-us.html
@@ -228,7 +228,7 @@
                     <option value="monthly">Monthly</option>
                   </select><br><br>
                   <label for="skills">Skills:</label>
-                  <textarea id="skills" name="skills" placeholder="Enter skills"></textarea><br><br>
+                  <textarea id="skills" name="skills" placeholder="Enter your skills and strengths here."></textarea><br><br>
                   <input type="file" class="form-control" id="cv" name="cv" ><br><br>
                   <input type="hidden" name="volunteer_form">
                   <input type="submit" value="Submit">
